# qt-ant-design

./: .gitignore  .gitmodules  404.html  AGENT.md  AGENTS.md  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  README.md  README.zh-CN.md  index.html  robots.txt  site.webmanifest  sitemap.xml
cmake/: QtAntDesignVersion.h.in  qt-ant-designConfig.cmake.in
components/: index.html
docs/: ant-design-icons.md  ant-design-reference.html  antwindow-antdock-issues.md  compatibility.html  component-api-overview-cn.html  design.html  getting-started.html  issue-log.md  performance-optimization.md  project-status.md  qt-control-porting-guidelines.md  qt-official-api-gap-audit.md  qt5-visual-adaptation-report.md  reliability-coverage.md  showcase-homepage-plan.md  versioning.md  visual-audit.md
docs/prompts/: continue-project.md  update-agent.md  update-agents.md
examples/: CMakeLists.txt  ExampleWindow.cpp  ExampleWindow.h  main.cpp  qt-ant-design-example.exe.manifest  qt-ant-design-example.qrc  qt-ant-design-example.rc
examples/pages/: DataDisplayPagesA.cpp  DataDisplayPagesB.cpp  DataEntryPages.cpp  DataEntryPagesA.cpp  DataEntryPagesB.cpp  FeedbackPages.cpp  FeedbackPagesA.cpp  FeedbackPagesB.cpp  GeneralPages.cpp  LayoutPages.cpp  NavigationPages.cpp  OtherPages.cpp  PageCommon.cpp  PageCommon.h  PageRegistry.cpp  PageRegistry.h  Pages.h  QtExtPages.cpp  ShowcasePage.cpp
resources/: qt-ant-design.qrc
src/: CMakeLists.txt
src/core/: AntCompat.h  AntDesign.cpp  AntDesign.h  AntFont.cpp  AntFont.h  AntPopupMotion.cpp  AntPopupMotion.h  AntQRGenerator.cpp  AntQRGenerator.h  AntStyleBase.cpp  AntStyleBase.h  AntTheme.cpp  AntTheme.h  AntThemeRefresh_p.h  AntTypes.cpp  AntTypes.h  AntWave.cpp  AntWave.h  QtAntDesignExport.h
src/private/: AntDockLayoutSerializer.cpp  AntDockLayoutSerializer.h
src/styles/: AntAlertStyle.cpp  AntAlertStyle.h  AntAutoCompleteStyle.cpp  AntAutoCompleteStyle.h  AntAvatarStyle.cpp  AntAvatarStyle.h  AntBadgeStyle.cpp  AntBadgeStyle.h  AntBreadcrumbStyle.cpp  AntBreadcrumbStyle.h  AntButtonStyle.cpp  AntButtonStyle.h  AntCalendarStyle.cpp  AntCalendarStyle.h  AntCardStyle.cpp  AntCardStyle.h  AntCascaderStyle.cpp  AntCascaderStyle.h  AntCheckBoxStyle.cpp  AntCheckBoxStyle.h  AntCheckboxStyle.cpp  AntCheckboxStyle.h  AntDatePickerStyle.cpp  AntDatePickerStyle.h  AntDescriptionsStyle.cpp  AntDescriptionsStyle.h  AntDialogStyle.cpp  AntDialogStyle.h  AntDividerStyle.cpp  AntDividerStyle.h  AntDockStyle.cpp  AntDockStyle.h  AntDrawerStyle.cpp  AntDrawerStyle.h  AntDropdownStyle.cpp  AntDropdownStyle.h  AntEmptyStyle.cpp  AntEmptyStyle.h  AntFileDialogStyle.cpp  AntFileDialogStyle.h  (+104 more)
src/widgets/: AntAffix.cpp  AntAffix.h  AntAlert.cpp  AntAlert.h  AntAnchor.cpp  AntAnchor.h  AntApp.cpp  AntApp.h  AntAutoComplete.cpp  AntAutoComplete.h  AntAvatar.cpp  AntAvatar.h  AntBadge.cpp  AntBadge.h  AntBreadcrumb.cpp  AntBreadcrumb.h  AntButton.cpp  AntButton.h  AntButtonStyle.cpp  AntButtonStyle.h  AntCalendar.cpp  AntCalendar.h  AntCalendarWidget.h  AntCard.cpp  AntCard.h  AntCarousel.cpp  AntCarousel.h  AntCascader.cpp  AntCascader.h  AntCheckBox.cpp  AntCheckBox.h  AntCheckbox.cpp  AntCheckbox.h  AntCollapse.cpp  AntCollapse.h  AntColorPicker.cpp  AntColorPicker.h  AntComboBox.h  AntConfigProvider.cpp  AntConfigProvider.h  (+167 more)
tests/: CMakeLists.txt  TestAntAdvancedInteractions.cpp  TestAntAliases.cpp  TestAntBadge.cpp  TestAntBuildSystem.cmake  TestAntButton.cpp  TestAntCheckBox.cpp  TestAntCheckbox.cpp  TestAntChildOwnership.cpp  TestAntCoverageInventory.cpp  TestAntDataDisplayA.cpp  TestAntDataDisplayB.cpp  TestAntDataEntryA.cpp  TestAntDataEntryB.cpp  TestAntExampleGuiSubsystem.cmake  TestAntFeedback.cpp  TestAntFloatButton.cpp  TestAntHighDpiScaling.cpp  TestAntIcon.cpp  TestAntInput.cpp  TestAntInstallConsumer.cmake  TestAntInteractions.cpp  TestAntLayout.cpp  TestAntMetaProperties.cpp  TestAntModal.cpp  TestAntMotion.cpp  TestAntNavigation.cpp  TestAntNoStyleSheetUsage.cmake  TestAntObjectTree.cpp  TestAntPopupLifecycle.cpp  TestAntQtExtensions.cpp  TestAntQtVersionMetricAudit.cpp  TestAntQtVersionVisualParity.cpp  TestAntRenderSmoke.cpp  TestAntSelect.cpp  TestAntStressLifecycle.cpp  TestAntSwitch.cpp  TestAntTag.cpp  TestAntThemeLifecycle.cpp  TestAntTypes.cpp  (+2 more)
tools/: generate_component_api_overview.py  generate_gh_pages_site.py
